// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot with no params 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ gWTxrG"
  />
</DocumentFragment>
`;

exports[`match snapshot with params 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ kVFoXK"
  />
</DocumentFragment>
`;

exports[`match snapshot with params 2`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ laFebJ"
  />
</DocumentFragment>
`;
